# patchproject

Diffandpatch/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Diffandpatch/app/src/androidTest/java/com/example/huozhenpeng/diffandpatch/: ExampleInstrumentedTest.java
Diffandpatch/app/src/main/: AndroidManifest.xml
Diffandpatch/app/src/main/cpp/: bspatch.c  bzip2recover.c
Diffandpatch/app/src/main/java/com/example/huozhenpeng/diffandpatch/: MainActivity.java
Diffandpatch/app/src/main/res/layout/: activity_main.xml
Diffandpatch/app/src/main/res/values/: strings.xml
Diffandpatch/app/src/test/java/com/example/huozhenpeng/diffandpatch/: ExampleUnitTest.java
Diffandpatch/gradle/wrapper/: gradle-wrapper.properties
